--- a/assignment-12/css/style.css
+++ b/assignment-12/css/style.css
@@ -1,139 +1,114 @@
-h1
-/* Navigation */
-
-.nav-bar{
-  display:inline;
+/* NAVIGATION */
+header {
+    list-style-type: none;
+    background-color: black;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 12pt;
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
-.nav-bar:hover{
-  color: rgb(0, 88, 666)
+#home-banner {
+    margin: -10px;
+    width: 110%;
+    height:30%
+    position: relative;
 }
 
-header{
-  background-color: rgb(6, 6, 6);
-  min-width: 100px;
-  max-width: 300;
-  text-align: center;
-  text-transform: lowercase;
-  position: center;
+#about-banner {
+    margin: -10px;
+    width: 110%;
+    height:30%
+    position: relative;
 }
 
-.menu{
-  margin: auto;
-  padding: .3em;
-  min-width: 70px;
-  line-height: 2em;
-  font-size: 33pt;
+#contact-banner {
+  margin: -10px;
+  width: 110%;
+  height:30%
+  position: relative;
 }
 
-.link-style a{
-  color: rgb(600, 600, 600)
+/* Set the layout of the menu: */
+.menu-item {
+    float: left;
+    min-width: 8em;
+    text-align: center;
+    background-color: black;
+    padding: 14px 16px;
 }
 
-a:hover {
-  color: rgb(33, 33, 33)
+.menu-item p{
+    margin: 0 auto;
+    padding: 0;
+    font-variant: small-caps;
+    font-size: 12pt;
 }
 
-.link-style:hover{
-  color: rgb(800, 66, 123))
+/* Style the links: */
+.menu-item p, a{
+    color: yellow;
+    text-decoration: none;
+}
+.link:hover {
+    background-color: black;
 }
 
-/* Dropdown Stufff */
+/* DROPDOWN */
 
-.dropdown-piece{
-  display: block;
-  text-align: left;
-  margin: 0;
-  padding: 0.6em;
-  min-width: 6em;
-}
-
-.dropdown-piece:hover, .dropdown-piece:hover a {
-    color: rgb(123, 332, 123);
-    background-color: rgb(0, 0, 0);
-}
-
-.dropdown {
+li.dropdown {
     display: inline-block;
 }
-.dropdown-main {
+.dropdown-content {
     display: none;
     position: absolute;
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid #004d39;
+    min-width: 200px;
     margin: 0;
-    width: 6em;
-    color: rgb(0, 0, 0);
-    background-color: rgb(666, 666, 666);
-    z-index: 6;
+    margin-top: .9em;
+    margin-left: -1em;
+    color: yellow;
+    background-color: black;
+    z-index: 1;
 }
-.dropdown-main a {
-    color: #666;
+.dropdown-content a {
+    color: yellow;
+    text-align: left;
+    display: block;
 }
-.dropdown:hover .dropdown-main {
+.dropdown:hover .dropdown-content {
     display: block;
 }
 
+.dropdown-item {
+    display: block;
+    text-align: left;
+    margin: 0;
+    padding: 12px 16px;
+    min-width: 7em;
+}
+.dropdown-item:hover, .dropdown-item:hover a {
+    color: yellow;
+    background-color: black;
+}
+/* end NAVIGATION */
 
 
-.background-square{
-  background-color: rgb(24, 24, 24);
-    width: 1847px;
-    height: 45px;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid rgb(0,0,0);
+/* CONTENT */
+.content {
+    margin: 30px;
+    margin-top: 40px;
+    font-family: 'Roboto', sans-serif;
+    color: yellow;
+    line-height: 32px;
 }
 
-.body-text{
-  background-color: rgb(255, 255, 255);
-    width: 700px;
-    height: auto;
-    margin: auto;
-    padding: 2px;
-    border: 33px solid grey;
-    z-index:
+h1 {
+    font-size: 30pt;
 }
 
-.title{
-  text-align: left;
-  color: rgb(255, 255, 255)
-}
-
-.placeholder-1{
-  width: 300px;
-  height: 500px;
-  position: center;
-  margin: auto;
-  margin-bottom: 1em;
-  margin-top: 1em;
-  border-style:
-  align-items: center;
-  text-align: center;
-}
- .placeholder-2{
-    width: 900px;
-    height: 500px;
-    position: center;
-    margin: auto;
-    margin-bottom: 1em;
-    margin-top: 1em;
-    border-style:
-    align-items: center;
-    text-align: center;
-  }
-
-  .placeholder-3{
-    width: 600px;
-    height: 500px;
-    position: center;
-    margin: auto;
-    margin-bottom: 1em;
-    margin-top: 1em;
-    border-style:
-    align-items: center;
-    text-align: center;
-   }
-
-#contact-form{
-  text-align: center;
-}
+/* end CONTENT */
