--- a/assignment-12/css/style.css
+++ b/assignment-12/css/style.css
@@ -103,7 +103,7 @@ li.dropdown {
     margin: 30px;
     margin-top: 40px;
     font-family: 'Roboto', sans-serif;
-    color: yellow;
+    color: black;
     line-height: 32px;
 }
 
