--- a/Final/css/style.css
+++ b/Final/css/style.css
@@ -1,135 +1,164 @@
-@import "syntax-variables";
-@import "ui-variables";
-
-@import "packages/red-wavy-underline/styles/red-wavy-underline";
-
-.theme-one-light-ui, .theme-one-dark-ui {
-  .status-bar { font-size: 14px; }
-  .tab-bar { font-size: 14px; }
-  .tree-view { font-size: 14px; }
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+* {
+  box-sizing: border-box;
 }
 
+body {
+  font-family: Arial;
+  padding: 10px;
+  background: #f1f1f1;
+}
 
-// Highlights the cursor line
-atom-text-editor::shadow {
-  .cursor-line {
-    background-color: @background-color-highlight;
+/* Header/Blog Title */
+.header {
+  padding: 30px;
+  text-align: center;
+  background: white;
+}
+
+.header h1 {
+  font-size: 50px;
+}
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {
+  float: left;
+  width: 75%;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 25%;
+  background-color: #f1f1f1;
+  padding-left: 20px;
+}
+
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+  margin-top: 20px;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {
+    width: 100%;
+    padding: 0;
   }
 }
 
-// Un-italicizes comments
-atom-text-editor::shadow {
-  .comment {
-    font-style: normal;
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
+  .topnav a {
+    float: none;
+    width: 100%;
   }
 }
+</style>
+</head>
+<body>
 
-// Makes the cursor pulse instead of blink
-atom-text-editor::shadow {
-  .cursor {
-    transition: opacity 0.5s;
-  }
-}
+<div class="header">
+  <h1>My Website</h1>
+  <p>Resize the browser window to see the effect.</p>
+</div>
 
-// Un-italicizes code markup in Markdown
-atom-text-editor::shadow {
-  .markup.raw.gfm {
-    font-style: normal;
-    color: @syntax-color-keyword;
-  }
-}
+<div class="topnav">
+  <a href="About">about.html</a>
+  <a href="Contact">contact.html</a>
+  <a href="Services">services.html</a>
+  <a href="Portfolio" style="float:right">Link</a>
+</div>
 
-// Brightens the gutter diff indicators to make them more visible
-.diff-icon(@color) {
-  background-color: fade(@color, 60%);
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Dec 7, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text.</p>
+      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    </div>
+    <div class="card">
+      <h2>TITLE HEADING</h2>
+      <h5>Title description, Sep 2, 2017</h5>
+      <div class="fakeimg" style="height:200px;">Image</div>
+      <p>Some text.</p>
+      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    </div>
+  </div>
+  <div class="rightcolumn">
+    <div class="card">
+      <h2>About Me</h2>
+      <div class="fakeimg" style="height:100px;">Image</div>
+      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    </div>
+    <div class="card">
+      <h3>Popular Post</h3>
+      <div class="fakeimg"><p>Image</p></div>
+      <div class="fakeimg"><p>Image</p></div>
+      <div class="fakeimg"><p>Image</p></div>
+    </div>
+    <div class="card">
+      <h3>Follow Me</h3>
+      <p>Some text.</p>
+    </div>
+  </div>
+</div>
 
-  &:before {
-    color: contrast(fade(@color, 60%));
-  }
-}
+<div class="footer">
+  <h2>Footer</h2>
+</div>
 
-.diff-border(@color) {
-  border-color: lighten(@color, 15%);
-  border-left-width: 4px;
-}
-
-@gutter-padding: 15px;
-
-atom-text-editor::shadow {
-  .gutter .line-number {
-    padding-left: @gutter-padding;
-
-    &.git-line-added {
-      .diff-border(@text-color-success);
-      padding-left: @gutter-padding - 4;
-    }
-
-    &.git-line-modified {
-      .diff-border(@text-color-warning);
-      padding-left: @gutter-padding - 4;
-    }
-
-    &.git-line-removed {
-      .diff-border(@text-color-error);
-      padding-left: @gutter-padding;
-    }
-  }
-
-  .gutter.git-diff-icon .line-number {
-    &.git-line-added {
-      .diff-icon(@text-color-success);
-    }
-
-    &.git-line-modified {
-      .diff-icon(@text-color-warning);
-    }
-
-    &.git-line-removed {
-      .diff-icon(@text-color-error);
-    }
-  }
-}
-
-// Makes the bracket matcher highlight more noticeable
-atom-text-editor::shadow {
-  .bracket-matcher .region {
-    border-bottom: 1px solid yellow;
-  }
-}
-
-// Replaces the atom-lint error highlight with the red wavy underline
-.lint .violation-border.violation-warning {
-  .red-wavy-underline;
-}
-
-// Highlights trailing whitespace except on the cursor line
-atom-text-editor::shadow {
-  div.line:not(.cursor-line) {
-    .trailing-whitespace {
-      background-color: @background-color-error;
-      color: contrast(@background-color-error);
-    }
-  }
-}
-
-// https://discuss.atom.io/t/crazy-3d-angled-tree-view/18765
-#atom-perspective() {
-  @viewing-distance: 12in;
-  @rotation: 20deg;
-
-  .tree-view-scroller {
-    transform: translateY(-10vh) perspective(@viewing-distance) rotateY(@rotation);
-    padding-top: 12vh;
-    padding-bottom: 12vh;
-    transform-origin: left;
-    width: 120%;
-    height: 120%;
-  }
-  body /deep/ atom-text-editor-minimap {
-    transform: perspective(@viewing-distance) rotateY(-@rotation);
-    transform-origin: right;
-  }
-}
-
-// Comment or uncomment the next line to control whether the atom-perspective feature is enabled
-// #atom-perspective;
+</body>
+</html>
